# case-assistant-agent

./: .gitignore  README.md  azure.yaml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/app/agents/: __init__.py  agent_config.py  agent_manager.py  answer_generator.py  case_assistant_agent.yaml  case_assistant_chat_agent.yaml  query_rewriter.py  reflection_agent.py
backend/app/api/: dependencies.py  exception_handlers.py  jwt_middleware.py  main.py
backend/app/api/routes/: __init__.py  chat.py  health.py  pipeline.py  sharepoint.py
backend/app/api/schemas/: __init__.py  chat.py  pipeline.py  sharepoint.py
backend/app/core/: __init__.py  app_config_source.py  container.py  container_group_chat_workflow.py  container_group_repositories.py  container_group_search_ingestion.py  container_group_sharepoint.py  container_groups.py  container_helpers.py  exceptions.py  logger.py  settings.py
backend/app/ingestion/: __init__.py  data_source_service.py  search_index_service.py  search_pipeline_orchestrator.py  sharepoint_sync_service.py  skillset_service.py
backend/app/ingestion/search/: __init__.py  data_source_service.py  indexer_service.py  knowledge_base_service.py  search_index_service.py  search_pipeline_orchestrator.py  skillset_service.py
backend/app/ingestion/sharepoint/: __init__.py  file_sync_runner.py  graph_adapter.py  graph_client.py  httpx_graph_adapter.py  membership_service.py  msgraph_adapter.py  sharepoint_sync_service.py  site_discovery_service.py  state_store.py  transfer_service.py
backend/app/models/: __init__.py  chat.py  config_options.py  sharepoint.py
backend/app/prompts/: __init__.py  templates.py
backend/app/repositories/: __init__.py  cosmos_repository.py
backend/app/services/: __init__.py  blob_storage_service.py  chat_history_service.py  chat_service.py  foundry_service.py  pii_detection_service.py  search_service.py  sharepoint_sync_queue_worker.py
backend/app/utils/: __init__.py  citation_tracker.py
backend/app/workflows/: core.py  executors.py
backend/functions/sharepoint_sync_scheduler/: function_app.py  local.settings.example.json  requirements.txt
backend/teams-messaging-app/: .env.example  agentService.py  boardcastOrchestrator.py  config.py  main.py  main_old.py  prompt.py  requirements.txt  sharepointService.py  teamsMessenger.py  test_orchestrator_loop.py  test_prompt_building.py  test_sharepoint_fetch.py
backend/teams-messaging-app/app-package/: manifest.json
backend/tests/: api-tests.example.http  api-tests.http  conftest.py  test_auth_flows.py  test_blob_storage_service.py  test_chat_history_service.py  test_chat_service.py  test_exception_handlers.py  test_jwt_middleware.py  test_knowledge_base_service.py  test_search_service.py  test_sharepoint_sites_route.py  test_sharepoint_sync_queue_worker.py  test_sharepoint_sync_service.py  test_workflow_executors.py
backend/tests/MipRelabelTest/: .gitignore  MipRelabelTest.csproj  Program.cs
frontend/simple-chat/: .env.development  .env.example  .env.production  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/teams-bot/: .localConfigs.sample  aad.manifest.json  eslint.config.mjs  m365agents.local.yml  m365agents.yml  (+3 more)
infra/: main.bicep  main.parameters.json
scripts/: azd-postprovision-rbac.ps1  azd-postprovision-rbac.sh  check_cosmos_rbac.py  create_service_principal.py  deploy_agent.py  setup_cosmos_rbac.py  setup_rbac.py
(+64 files in other folders)
